# monocular-depth-navigation

./: .gitignore  README.md  USAGE.md
ros2_ws/: cleanup_ros.sh  frames_2026-01-01_15.33.37.gv
ros2_ws/src/mono_depth_perception/: CMakeLists.txt  package.xml
ros2_ws/src/mono_depth_perception/config/: ground_edge_params.yaml
ros2_ws/src/mono_depth_perception/launch/: ground_edge.launch.py
ros2_ws/src/mono_depth_perception/src/: ground_edge_node.cpp
ros2_ws/src/my_robot/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot/config/: nav2_bt_simple.xml  nav2_local_params.yaml  nav2_local_view.rviz  robot_view.rviz  velocity_mixer_params.yaml
ros2_ws/src/my_robot/launch/: colorful_obstacles.launch.py  depth_nav.launch.py  house.launch.py  my_maze.launch.py  nav2_local.launch.py  rsp.launch.py  rtabmap.launch.py  rviz.launch.py  simple_maze.launch.py
ros2_ws/src/my_robot/scripts/: create_map.py  create_simple_maze_map.py  generate_colorful_world.py  generate_maze.py  generate_simple_maze.py  static_map_publisher.py
ros2_ws/src/my_robot/src/: autopilot.py  camera_trajectory_control.py  shuttle_drive.py  teleop.py  teleop_gui.py  topic_relay.py
ros2_ws/src/my_robot/urdf/: my_robot.urdf.xacro
ros2_ws/src/my_robot/worlds/: colorful_obstacles.world  my_maze.world  simple_maze.world
